--- a/runtest/a.out.tex
+++ b/runtest/a.out.tex
@@ -5,10 +5,8 @@
 \begin{center}
 (kkk + 2)
 \Verb&  1 {x : int, y : float} 2 3 3&
-( teX1 +  2)
-
-    \a bb \K{a}{a} 
-
+(teX1 + 2)
+\a bb \K{a}{a} 
 
 
 (1 + 1)
@@ -18,6 +16,13 @@ a + a
 2
 
 
-
+hhh
 
 1 + 1
+
+
+
+3
+
+
+1
